[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenuHud.gd" type="Script" id=1]

[node name="MainMenuHud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StartMap1" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -54.0
margin_top = 150.0
margin_right = 54.0
margin_bottom = 170.0
action_mode = 0
text = "Start Map 1"

[node name="StartMap2" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -54.0
margin_top = 200.0
margin_right = 54.0
margin_bottom = 220.0
action_mode = 0
text = "Start Map 2"

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -15.5
margin_right = 20.0
margin_bottom = 15.5
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartMap1" to="." method="_on_StartMap1_pressed"]
[connection signal="pressed" from="StartMap2" to="." method="_on_StartMap2_pressed"]
